// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Atoms / Badge / IconBadge Badge With Icon 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 72px;
  min-width: 72px;
  background-color: #0046FF;
  border-radius: 72px;
}

.c1 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    focusable="false"
    height={64}
    preserveAspectRatio="xMidYMid meet"
    role="presentation"
    secondaryColor={[Function]}
    width={64}
  >
    <path
      clipRule="evenodd"
      d="M11 18H40V20H14.7205L32 34.6876L41.5609 26.5608L42.9797 27.9797L38.3898 31.8812L51 42.81V30H53V46H11V18ZM13 42.81L25.6102 31.8812L13 21.1624V42.81ZM27.152 33.1916L14.6807 44H49.3193L36.8481 33.1916L32 37.3124L27.152 33.1916Z"
      fill="currentColor"
      fillRule="evenodd"
    />
    <path
      clipRule="evenodd"
      d="M53.4142 12H46.5858L42 16.5858V23.4142L46.5858 28H53.4142L58 23.4142V16.5858L53.4142 12ZM49 16V21H51V16H49ZM49 24V22H51V24H49Z"
      fill="#FFFFFF"
      fillRule="evenodd"
    />
  </svg>
</span>
`;

exports[`Storyshots Atoms / Badge / IconBadge Badge with illustration 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 32px;
  min-width: 32px;
  background-color: #0046FF;
  border-radius: 32px;
}

.c1 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    focusable="false"
    height={24}
    preserveAspectRatio="xMidYMid meet"
    role="presentation"
    secondaryColor={[Function]}
    width={24}
  >
    <path
      d="M11 13v10h2V13h10v-2H13V1h-2v10H1v2h10z"
      fill="currentColor"
    />
  </svg>
</span>
`;

exports[`Storyshots Atoms / Badge / IconBadge Custom badge size 1`] = `
.c0 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  text-align: center;
  box-sizing: border-box;
  height: 32px;
  min-width: 32px;
  background-color: #0046FF;
  border-radius: 32px;
}

.c1 {
  color: #FFFFFF;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  -webkit-flex-shrink: 0;
  -ms-flex-negative: 0;
  flex-shrink: 0;
  display: block;
}

<span
  className="c0"
>
  <svg
    aria-hidden="true"
    className="c1"
    focusable="false"
    height={8}
    preserveAspectRatio="xMidYMid meet"
    role="presentation"
    secondaryColor={[Function]}
    width={8}
  >
    <path
      d="M3 5v3h2V5h3V3H5V0H3v3H0v2h3z"
      fill="currentColor"
    />
  </svg>
</span>
`;
